[package]
name = "armageddon-sentinel"
version.workspace = true
edition.workspace = true

[dependencies]
armageddon-common = { workspace = true }
armageddon-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
maxminddb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }
chrono = { workspace = true }
aho-corasick = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }
arc-swap = { workspace = true }
blake3 = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
armageddon-nexus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
