[package]
name = "armageddon-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
armageddon-common = { workspace = true }
armageddon-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
wasmtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
wat = { workspace = true }
