[package]
name = "armageddon-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
armageddon-common = { workspace = true }
armageddon-config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
wasmtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
wat = { workspace = true }

[features]
# Default build: existing v0.2.0 plugin runtime only.  No Coraza host
# code is monomorphised into the binary.
default = []

# Opt-in proxy-wasm v0.2.1 host runtime — required to load the Coraza
# WAF (`coraza-waf.wasm`).  Adds the `proxy_wasm_v0_2_1` module and
# transitively expands the wasmtime feature set used.
#
# Build with: `cargo build --features coraza-wasm`
coraza-wasm = []
