[package]
name = "armageddon-xds"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later"
repository.workspace = true
description = "Active xDS v3 ADS consumer for ARMAGEDDON (FASO DIGITALISATION control plane)"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.13"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
armageddon-common = { workspace = true }
armageddon-config = { workspace = true }
uuid = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
