[package]
name = "armageddon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "armageddon"
path = "src/main.rs"

[dependencies]
armageddon-common = { workspace = true }
armageddon-config = { workspace = true }
armageddon-forge = { workspace = true }
armageddon-sentinel = { workspace = true }
armageddon-arbiter = { workspace = true }
armageddon-oracle = { workspace = true }
armageddon-aegis = { workspace = true }
armageddon-nexus = { workspace = true }
armageddon-veil = { workspace = true }
armageddon-wasm = { workspace = true }
armageddon-ai = { workspace = true }
armageddon-quic = { workspace = true }
armageddon-mesh = { workspace = true }
armageddon-xds = { workspace = true }
armageddon-lb = { workspace = true }
armageddon-retry = { workspace = true }
armageddon-cache = { workspace = true }
armageddon-admin = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
prometheus = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
