[package]
name = "armageddon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "armageddon"
path = "src/main.rs"

[features]
# NUMA-aware worker pinning (Linux only, requires hwloc system library).
# Not enabled by default — opt in with --features numa.
numa = ["dep:hwloc", "dep:libc"]

[dependencies]
# Optional NUMA deps (activated only by the `numa` feature)
hwloc     = { workspace = true, optional = true }
libc      = { workspace = true, optional = true }
thiserror = { workspace = true }

armageddon-common = { workspace = true }
armageddon-config = { workspace = true }
armageddon-forge = { workspace = true, features = ["pingora"] }
armageddon-ratelimit = { workspace = true }
armageddon-sentinel = { workspace = true }
armageddon-arbiter = { workspace = true }
armageddon-oracle = { workspace = true }
armageddon-aegis = { workspace = true }
armageddon-nexus = { workspace = true }
armageddon-veil = { workspace = true }
armageddon-wasm = { workspace = true }
armageddon-ai = { workspace = true }
armageddon-quic = { workspace = true }
armageddon-mesh = { workspace = true }
armageddon-xds = { workspace = true }
armageddon-lb = { workspace = true }
armageddon-retry = { workspace = true }
armageddon-cache = { workspace = true }
armageddon-admin = { workspace = true }
armageddon-admin-api = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
redis = { workspace = true }
prometheus = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
