# SPDX-License-Identifier: AGPL-3.0-or-later
# terroir-admin — Loopback admin API (feature flags, tenant onboarding, debug)
# HTTP :9904 (loopback only)

[package]
name = "terroir-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "terroir_admin"
path = "src/lib.rs"

[[bin]]
name = "terroir-admin"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
# Base64 for keyset pagination cursor encoding
base64 = "0.22"
