# SPDX-License-Identifier: AGPL-3.0-or-later
# terroir-buyer — Portail acheteurs/exportateurs (DDS download, contract signing)
# HTTP :8835

[package]
name = "terroir-buyer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "terroir_buyer"
path = "src/lib.rs"

[[bin]]
name = "terroir-buyer"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
